--- a/gridsystem.html
+++ b/gridsystem.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/assets/fevicon.png" type="image/png" />
   <title>DT.GridSystem Unity Manual</title>
   <style>
     :root {
@@ -211,7 +212,8 @@
   <pre><code>https://github.com/RahulLinganagoudra/com.dreamertheory.gridsystem.git</code></pre>
   <p>Click <strong>Add</strong> and Unity will install the package automatically.</p>
   <blockquote>☝️ Make sure your repo has a <code>package.json</code> in the root or under
-    <code>Packages/DT.GridSystem</code>.</blockquote>
+    <code>Packages/DT.GridSystem</code>.
+  </blockquote>
 
   <h3>🛠 Option 2: Manual Import</h3>
   <ol>
