--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
     <header>
         <h1>🧰 DreamerTheory Unity Docs</h1>
         <p>Documentation hub for DreamerTheory Unity packages</p>
+        <link rel="icon" href="/assets/fevicon.png" type="image/png" />
+
     </header>
 
     <div class="container">
@@ -126,9 +128,10 @@
                 <h2>🧮 DT.GridSystem</h2>
                 <p>Generic 2D/3D grid framework with coordinate conversion, events, and debugging.</p>
             </a>
-<a class="card" href="savingsystem.html">
+            <a class="card" href="savingsystem.html">
                 <h2>🧮 DT.Saving System</h2>
-                <p>Easy way to save and load using json based saving. Supports adapter, use adpter to easily swap to cloud save</p>
+                <p>Easy way to save and load using json based saving. Supports adapter, use adpter to easily swap to
+                    cloud save</p>
             </a>
             <!-- Future cards go here -->
             <!--
