--- a/savingsystem.html
+++ b/savingsystem.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EntitySaver - Unity Save System Component</title>
+  <link rel="icon" href="/assets/fevicon.png" type="image/png" />
   <style>
     /* Base colors for light and dark mode using CSS variables */
     :root {
@@ -42,7 +44,10 @@
       max-width: 900px;
     }
 
-    h1, h2, h3, h4 {
+    h1,
+    h2,
+    h3,
+    h4 {
       color: var(--heading-color);
       font-weight: 600;
     }
@@ -57,7 +62,8 @@
       text-decoration: underline;
     }
 
-    code, pre {
+    code,
+    pre {
       font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
       background-color: var(--code-bg);
       border-radius: 4px;
@@ -75,7 +81,8 @@
       border: 1px solid var(--border-color);
     }
 
-    ul, ol {
+    ul,
+    ol {
       margin-left: 1.5rem;
     }
 
@@ -108,13 +115,16 @@
       color: #00008b;
       font-weight: bold;
     }
-
   </style>
 </head>
+
 <body>
   <h1 id="entitysaver-unity-save-system-component">EntitySaver - Unity Save System Component</h1>
-  <p>The <code>EntitySaver</code> component is part of a lightweight Unity saving system. It enables any GameObject to serialize and deserialize its state using attached <code>ISaveable</code> components. Each entity is uniquely identified with a persistent <code>EntityID</code>.
-    A lightweight save/load system for Unity that allows objects to register as saveable entities with unique persistent IDs.</p>
+  <p>The <code>EntitySaver</code> component is part of a lightweight Unity saving system. It enables any GameObject to
+    serialize and deserialize its state using attached <code>ISaveable</code> components. Each entity is uniquely
+    identified with a persistent <code>EntityID</code>.
+    A lightweight save/load system for Unity that allows objects to register as saveable entities with unique persistent
+    IDs.</p>
 
   <div class="badges">
     <a href="https://unity.com/" class="badge" aria-label="Unity 2020 or higher">
@@ -123,8 +133,10 @@
     <a href="https://opensource.org/licenses/MIT" class="badge" aria-label="License MIT">
       <img src="https://img.shields.io/badge/License-MIT-yellow.svg" alt="License: MIT" />
     </a>
-    <a href="https://github.com/RahulLinganagoudra/com.dreamertheory.savingsystem" class="badge" aria-label="GitHub Repo stars">
-      <img src="https://img.shields.io/github/stars/RahulLinganagoudra/com.dreamertheory.savingsystem" alt="GitHub Repo stars" />
+    <a href="https://github.com/RahulLinganagoudra/com.dreamertheory.savingsystem" class="badge"
+      aria-label="GitHub Repo stars">
+      <img src="https://img.shields.io/github/stars/RahulLinganagoudra/com.dreamertheory.savingsystem"
+        alt="GitHub Repo stars" />
     </a>
     <a href="https://github.com/RahulLinganagoudra" class="badge" aria-label="Made with love">
       <img src="https://img.shields.io/badge/made%20with-%E2%9D%A4-red" alt="Made With ❤️" />
@@ -158,7 +170,8 @@
   <hr />
 
   <h3 id="usage">Usage</h3>
-  <p>This saving system uses an adapter pattern to allow switching between local, cloud, or other saving strategies easily.</p>
+  <p>This saving system uses an adapter pattern to allow switching between local, cloud, or other saving strategies
+    easily.</p>
   <pre><code>     
      ┌────────────────────┐
      │    GameObject      │
@@ -206,7 +219,7 @@ public interface ISaveable
   <ol>
     <li>
       <p><strong>Add the EntitySaver Component</strong><br />
-      Attach the EntitySaver component to any GameObject. It will automatically:</p>
+        Attach the EntitySaver component to any GameObject. It will automatically:</p>
       <ul>
         <li>Assign a unique EntityID.</li>
         <li>Find and cache all ISaveable components.</li>
@@ -215,7 +228,7 @@ public interface ISaveable
     </li>
     <li>
       <p><strong>Saving &amp; Loading with a Save System Adapter</strong><br />
-      Instead of directly saving data, your logic should go through an ISaveSystem:</p>
+        Instead of directly saving data, your logic should go through an ISaveSystem:</p>
       <pre><code>public interface ISaveSystem
 {
     void SaveData(string key, string value, Action&lt;bool&gt; callback);
@@ -233,7 +246,8 @@ public interface ISaveable
 }
       </code></pre>
       <p>This saves data locally at:<br />
-      <code>%APPDATA%/../LocalLow/&lt;Company&gt;/&lt;Project&gt;/key.json</code></p>
+        <code>%APPDATA%/../LocalLow/&lt;Company&gt;/&lt;Project&gt;/key.json</code>
+      </p>
     </li>
   </ol>
 
@@ -279,11 +293,13 @@ public interface ISaveable
     }
 }
   </code></pre>
-  <p><code>SetData()</code> and <code>GetData()</code> are the functions provided in the package that will convert the <code>string</code> to whatever the datatype you want.</p>
+  <p><code>SetData()</code> and <code>GetData()</code> are the functions provided in the package that will convert the
+    <code>string</code> to whatever the datatype you want.</p>
   <p>Attach <code>EntitySaver</code> and <code>PlayerStats</code> to the same <code>GameObject</code>.</p>
 
   <h3>Saving and Loading</h3>
-  <p>Use the <code>Save()</code> and <code>Load()</code> methods of <code>EntitySaver</code> to serialize or deserialize:</p>
+  <p>Use the <code>Save()</code> and <code>Load()</code> methods of <code>EntitySaver</code> to serialize or
+    deserialize:</p>
   <pre><code>SavingSystem.Instance.Save();
 SavingSystem.Instance.Load();
   </code></pre>
@@ -294,9 +310,12 @@ SavingSystem.Instance.Load();
     <li>
       Use this button to assign a unique ID to the GameObject.
       <p>
-        <img src="https://github.com/RahulLinganagoudra/MediaResources/blob/main/Screenshot%202025-05-15%20174244.png" alt="Generate ID button" style="max-width:100%;height:auto;" />
+        <img src="https://github.com/RahulLinganagoudra/MediaResources/blob/main/Screenshot%202025-05-15%20174244.png"
+          alt="Generate ID button" style="max-width:100%;height:auto;" />
         <br />
-        <img src="https://github.com/RahulLinganagoudra/MediaResources/blob/main/Screenshot%202025-05-15%20174250.png" alt="EntitySaver inspector" style="max-width:100%;height:auto;" /></p>
+        <img src="https://github.com/RahulLinganagoudra/MediaResources/blob/main/Screenshot%202025-05-15%20174250.png"
+          alt="EntitySaver inspector" style="max-width:100%;height:auto;" />
+      </p>
     </li>
     <li>
       Required if you want to reference this object persistently across sessions.
@@ -305,6 +324,8 @@ SavingSystem.Instance.Load();
 
   <h3 id="notes">Notes</h3>
   <p>The EntityID is serialized and can be generated via the button or programmatically.</p>
-  <p><strong>Do not modify EntityID at runtime unless you know what you're doing — it may break save data consistency.</strong></p>
+  <p><strong>Do not modify EntityID at runtime unless you know what you're doing — it may break save data
+      consistency.</strong></p>
 </body>
+
 </html>
