--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🧰 DreamerTheory Unity Packages</title>
+    <title>DreamerTheory Unity Packages</title>
     <link rel="icon" href="assets/fevicon.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
@@ -114,10 +114,13 @@
 <body>
 
     <header>
-        <h1>🧰 DreamerTheory Unity Docs</h1>
-        <p>Documentation hub for DreamerTheory Unity packages</p>
-        <link rel="icon" href="/assets/fevicon.png" type="image/png" />
+        <h1>
+            <img src="assets/favicon.png" alt="Logo"
+                style="height: 1.2em; vertical-align: middle; margin-right: 0.3em;" />
+            DreamerTheory Unity Docs
+        </h1>
 
+        <p>Documentation hub for DreamerTheory Unity packages</p>
     </header>
 
     <div class="container">
