--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <header>
         <h1>
-            <img src="~/assets/favicon.png" alt="Logo"
+            <img src="assets/favicon.png" alt="Logo"
                 style="height: 1.2em; vertical-align: middle; margin-right: 0.3em;" />
             DreamerTheory Unity Docs
         </h1>
