--- a/index.html
+++ b/index.html
@@ -114,11 +114,13 @@
 <body>
 
     <header>
-        <h1>
-            <img src="/assets/favicon.png" alt="Logo"
-     style="height: 1.2em; vertical-align: middle; margin-right: 0.3em;" />
-            DreamerTheory Unity Docs
-        </h1>
+       <body>
+
+    <img src="./assets/favicon.png" alt="Logo"
+         style="height: 1.2em; vertical-align: middle; margin-right: 0.3em;" />
+    <h1>DreamerTheory Unity Docs</h1>
+
+
 
         <p>Documentation hub for DreamerTheory Unity packages</p>
     </header>
