--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <header>
        <body>
 
-    <img src="./assets/favicon.png" alt="Logo"
+    <img src="https://github.com/DreamerTheory/DreamerTheory.github.io/blob/main/assets/fevicon.png" alt="Logo"
          style="height: 1.2em; vertical-align: middle; margin-right: 0.3em;" />
     <h1>DreamerTheory Unity Docs</h1>
 
