--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
        <body>
 
     <img src="Icon.png" alt="Logo"
-         style="height: 1.2em; vertical-align: middle; margin-right: 0.3em;" />
+         style="height: 5em; vertical-align: middle; margin-right: 1em;margin-bottom:1em;" />
     <h1>DreamerTheory Unity Docs</h1>
 
 
