- add haptics documentation

--- a/index.html
+++ b/index.html
@@ -114,15 +114,16 @@
 <body>
 
     <header>
-       <body>
 
-    <img src="Icon.png" alt="Logo"
-         style="height: 5em; vertical-align: middle; margin-right: 1em;margin-bottom:1em;" />
-    <h1>DreamerTheory Unity Docs</h1>
+        <body>
+
+            <img src="Icon.png" alt="Logo"
+                style="height: 5em; vertical-align: middle; margin-right: 1em;margin-bottom:1em;" />
+            <h1>DreamerTheory Unity Docs</h1>
 
 
 
-        <p>Documentation hub for DreamerTheory Unity packages</p>
+            <p>Documentation hub for DreamerTheory Unity packages</p>
     </header>
 
     <div class="container">
@@ -138,7 +139,11 @@
                 <h2>🧮 DT.Saving System</h2>
                 <p>Easy way to save and load using json based saving. Supports adapter, use adpter to easily swap to
                     cloud save</p>
-            </a>         
+            </a>
+            <a class="card" href="haptics.html">
+                <h2>🧮 DT.Haptics System</h2>
+                <p>Easy way to add haptics into your mobile game</p>
+            </a>
 
         </div>
     </div>
