refactor style and fix the image loading issue in saving system documentation

--- a/gridsystem.html
+++ b/gridsystem.html
@@ -6,110 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="/assets/fevicon.png" type="image/png" />
   <title>DT.GridSystem Unity Manual</title>
-  <style>
-    :root {
-      --bg-color: #f9f9f9;
-      --text-color: #333;
-      --heading-color: #2c3e50;
-      --code-bg: #eee;
-      --pre-bg: #272822;
-      --pre-text: #f8f8f2;
-      --blockquote-bg: #e8f5e9;
-      --blockquote-border: #66bb6a;
-      --table-border: #ccc;
-      --link-color: #007acc;
-    }
+  <link rel="stylesheet" href="style.css">
 
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg-color: #1e1e1e;
-        --text-color: #ddd;
-        --heading-color: #ffffff;
-        --code-bg: #2d2d2d;
-        --pre-bg: #2d2d2d;
-        --pre-text: #f8f8f2;
-        --blockquote-bg: #2e3c2f;
-        --blockquote-border: #66bb6a;
-        --table-border: #444;
-        --link-color: #80bfff;
-      }
-    }
-
-    body {
-      font-family: "Segoe UI", sans-serif;
-      line-height: 1.6;
-      max-width: 900px;
-      margin: auto;
-      padding: 40px;
-      background: var(--bg-color);
-      color: var(--text-color);
-    }
-
-    h1,
-    h2,
-    h3 {
-      color: var(--heading-color);
-    }
-
-    h1 {
-      border-bottom: 2px solid var(--table-border);
-      padding-bottom: 0.3em;
-    }
-
-    pre {
-      background: var(--pre-bg);
-      color: var(--pre-text);
-      padding: 1em;
-      overflow-x: auto;
-      border-radius: 6px;
-    }
-
-    code {
-      background: var(--code-bg);
-      padding: 2px 6px;
-      border-radius: 4px;
-      font-family: Consolas, monospace;
-    }
-
-    blockquote {
-      background: var(--blockquote-bg);
-      padding: 1em;
-      border-left: 5px solid var(--blockquote-border);
-      font-style: italic;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 1em;
-    }
-
-    th,
-    td {
-      padding: 10px;
-      border: 1px solid var(--table-border);
-    }
-
-    th {
-      background-color: var(--code-bg);
-    }
-
-    a {
-      color: var(--link-color);
-      text-decoration: none;
-    }
-
-    .badge {
-      display: inline-block;
-      margin-right: 8px;
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid var(--table-border);
-      margin: 2em 0;
-    }
-  </style>
 
 </head>
 
