--- a/haptics.html
+++ b/haptics.html
@@ -4,66 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Haptics - Unity Cross-Platform Haptic Feedback System</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 1.5rem;
-      max-width: 800px;
-      margin: auto;
-      line-height: 1.6;
-      transition: background-color 0.3s, color 0.3s;
-    }
+ <link rel="stylesheet" href="style.css">
 
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    code {
-      background: rgba(128, 128, 128, 0.1);
-      padding: 0.2em 0.4em;
-      border-radius: 4px;
-      font-family: monospace;
-    }
-
-    pre {
-      background: rgba(128, 128, 128, 0.1);
-      padding: 1rem;
-      border-radius: 8px;
-      overflow: auto;
-    }
-
-    .badges img {
-      margin-right: 0.5em;
-      margin-top: 0.5em;
-    }
-
-    .home-button {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5em;
-      padding: 0.5em 1em;
-      background-color: #0078d7;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
-
-    .home-button:hover {
-      background-color: #005fa3;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      body {
-        background-color: #121212;
-        color: #f0f0f0;
-      }
-      code, pre {
-        background: rgba(255, 255, 255, 0.1);
-      }
-    }
-  </style>
 </head>
 <body>
 
